--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     max-width: 1200px; /* Largura máxima do container aumentada */
     margin: 0 auto; /* Centraliza o container */
     padding: 20px;
-    background-color: #3aa11b; /* Roxo médio 5*/800080?
+    background-color: #8000080; 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
